force-app/main/default/objects/Personal__c/Personal__c.object-meta.xml
<CustomObject>
    <label>Personal</label>
    <nameField>
        <label>Documento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>