force-app/main/default/objects/Personal__c/fields/Fecha_de_expedici_n__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_expedici_n__c</fullName>
    <description>Fecha de expedición</description>
    <label>Fecha de expedición</label>
    <type>Date</type>
</CustomField>