force-app/main/default/objects/Personal__c/fields/Imagen__c.field-meta.xml
<CustomField>
    <fullName>Imagen__c</fullName>
    <formula>IMAGE(Imagen_Url__c,  Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imagen</label>
    <type>Text</type>
</CustomField>