force-app/main/default/objects/Personal__c/fields/Imagen_Url__c.field-meta.xml
<CustomField>
    <fullName>Imagen_Url__c</fullName>
    <label>Imagen URL</label>
    <type>Url</type>
</CustomField>