force-app/main/default/objects/Personal__c/fields/No_es_un_robot__c.field-meta.xml
<CustomField>
    <fullName>No_es_un_robot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No es un robot</label>
    <type>Checkbox</type>
</CustomField>