force-app/main/default/objects/Personal__c/fields/Nombre_cliente__c.field-meta.xml
<CustomField>
    <fullName>Nombre_cliente__c</fullName>
    <label>Nombre cliente</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>