force-app/main/default/objects/Personal__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <label>Pais</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Colombia</fullName>
            </value>
            <value>
                <fullName>Argentina</fullName>
            </value>
            <value>
                <fullName>Brasil</fullName>
            </value>
            <value>
                <fullName>Venezuela</fullName>
            </value>
            <value>
                <fullName>Chile</fullName>
            </value>
            <value>
                <fullName>Ecuador</fullName>
            </value>
            <value>
                <fullName>Peru</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>