force-app/main/default/objects/Personal__c/recordTypes/Prueba.recordType-meta.xml
<RecordType>
    <fullName>Prueba</fullName>
    <active>true</active>
    <description>Prueba</description>
    <label>Prueba</label>
</RecordType>