force-app/main/default/objects/Personal__c/recordTypes/Prueba_2.recordType-meta.xml
<RecordType>
    <fullName>Prueba_2</fullName>
    <active>true</active>
    <description>Prueba 2</description>
    <label>Prueba_2</label>
</RecordType>